# tpg26x

./: .gitignore  LICENCE  README.md  pyproject.toml
tpg26x/: __init__.py  cli.py  tpg26x.py
