[tool.poetry]
name = "tpg26x"
version = "0.2.0"
description = ""
authors = ["jjj999 <jjj999to@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
